# RustVSPython_NeuralNetworks

./: README.md  getData.sh
python/: script.py
python/data/: data.py
python/func/: func.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/data/: data.rs  mod.rs
